<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".First" 
    android:background="@drawable/back"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome" 
        android:id="@+id/tv1"
        android:textSize="30sp"
        android:textColor="#006633"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv1"
        android:textSize="22sp"
        android:id="@+id/tv2"
        android:textColor="#000000"
        android:text="@string/welcome2"
        android:padding="40dp"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_centerVertical="true"
        android:textSize="24sp"
        android:padding="20dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:text="@string/easy"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:textSize="24sp"
        android:padding="20dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:text="@string/difficult"
        android:textColor="#000000" />

</RelativeLayout>