<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Easy1"
android:background="#669900"     >

    <TextView
        android:id="@+id/tv4"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
       
        android:text="@string/q2easy"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/easy2" 
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/easy21" 
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:textColor="@color/green"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Move to Question 3" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/tv6"
        >

        <RadioButton
            android:id="@+id/rbtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/radioGroup1"
            
            android:layout_marginTop="40dp"
            android:layout_toLeftOf="@+id/button1"
            android:textColor="@color/white"
            android:text="x" />

        <RadioButton
            android:id="@+id/rbtn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/rbtn1"
            android:layout_alignBottom="@+id/rbtn1"
            android:layout_alignRight="@+id/tv4"
            android:textColor="@color/white"
            android:text="o" />

        <RadioButton
            android:id="@+id/rbtn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="69dp"
            android:layout_marginTop="10dp"
            android:text="m"
            android:textColor="@color/white" />

    </RadioGroup>

    <RadioButton
        android:id="@+id/rbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
          android:layout_marginBottom="29dp"
        android:text="p"
        android:textColor="@color/white" />

</RelativeLayout>